--- a/style.css
+++ b/style.css
@@ -9,7 +9,15 @@ $lightGrey: #d3d3d3;
 @mixin transition($property) {transition: $property .25s;}
 
 /*Typography*/
-html {font: 16px 'Open Sans Condensed', 'Roboto Condensed', Verdana, sans-serif;}
+/*html {font: 16px 'Open Sans Condensed', 'Roboto Condensed', Verdana, sans-serif;}*/
+
+	*{
+		font-size:16px;
+		font-family: Times New Roman;
+	}
+
+
+
 h1 {font-size: 2.25em;}
 h2 {font-size: 2em;}
 h3 {font-size: 1.75em;}
