--- a/style/style.css
+++ b/style/style.css
@@ -17,5 +17,19 @@
 }
 
 .collaborators-st{
-  padding: 30px;
+  text-align: center;
+}
+
+.collaborators-st > ul > li {
+    list-style: none;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  color: black;
+  text-align: center;
 }
