--- a/style.css
+++ b/style.css
@@ -489,3 +489,10 @@ h4{
 	 padding-bottom:40px;
 	 color:#262626;
 }
+footer {
+    display: relative;
+    color:white;
+    background-color:#350B24;
+	padding: 15px;
+    text-align: center;    
+}
