--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,4 @@
-/* *{ */
 body{
-  /* font-family: Times New Roman; */
   font-size: 16px;
 }
 
@@ -83,4 +81,9 @@ footer {
 
 .blueText {
   color : blue;
+}
+
+.blackBoldText {
+  font-weight : bold;
+  color : #00000000;
 }
