--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,6 @@ footer {
   color : blue;
 }
 
-.blackBoldText {
-  font-weight : bold;
-  color : #00000000;
+.B123_Schedule {
+  margin-bottom : 2em;
 }
